@@ -83,10 +83,8 @@ int parse_sensor_types (const char *special_string,
 int list_sensor_types (void);
 
 /* 1 if all valid, 0 if not, -1 on error */
-int valid_sensor_types (pstdout_state_t pstate,
-                        char sensor_types[][MAX_SENSOR_TYPES_STRING_LENGTH+1],
-                        unsigned int sensor_types_length,
-                        unsigned int allow_oem_reserved);
+int valid_sensor_types (char sensor_types[][MAX_SENSOR_TYPES_STRING_LENGTH+1],
+                        unsigned int sensor_types_length);
 
 int get_sensor_units_output_string (pstdout_state_t pstate,
                                     ipmi_sdr_ctx_t sdr_ctx,
